AccountDetailsDto: добавлена @EqualsAndHashCode
AccountDetailsControllerTest:
переименованование переменных
в init() добавлен второй объект AccountDetailsDto
переименование методов
на save, read, readAll, update довавлен еще один негативный сценарий на каждый метод

AccountDetailsMapperTest:
init() -> prepare()
в toDtoListTest и toDtoListOneElementNullTest, getZeroElement(result) вынесена как отдельная локальная переменная

RestHandlerException:
добавлен хендлер на MissingServletRequestParameterException

ParentTest:
добавлены статические переменные
параметризованы метоны getZero...() -> getZeroElement()